# vailabel-studio

./: .cursorrules  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.js  API_DOCUMENTATION.md  CODE_OF_CONDUCT.md  CONTRIBUTE.md  LICENSE  README.md  SECURITY.md  UNIFIED_ARCHITECTURE.md  commitlint.config.js  jest.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-note.md  sonar-project.properties  tailwind.config.ts  tsconfig.base.json  tsconfig.json  turbo.json  types.d.ts
apps/studio/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
apps/studio/src-tauri/capabilities/: default.json
apps/studio/src-tauri/crates/: ARCHITECTURE.md
apps/studio/src-tauri/crates/analysis/: Cargo.toml
apps/studio/src-tauri/crates/analysis/src/: lib.rs
apps/studio/src-tauri/crates/annotation/: Cargo.toml
apps/studio/src-tauri/crates/annotation/src/: lib.rs
apps/studio/src-tauri/crates/arch-tests/: Cargo.toml
apps/studio/src-tauri/crates/arch-tests/src/: lib.rs
apps/studio/src-tauri/crates/arch-tests/tests/: dependency_rules.rs
apps/studio/src-tauri/crates/cloud/: Cargo.toml
apps/studio/src-tauri/crates/cloud/src/: lib.rs
apps/studio/src-tauri/crates/copilot/: Cargo.toml
apps/studio/src-tauri/crates/copilot/src/: lib.rs
apps/studio/src-tauri/crates/core/: Cargo.toml
apps/studio/src-tauri/crates/core/src/: entity.rs  error.rs  event.rs  lib.rs  paging.rs  repository.rs  specification.rs
apps/studio/src-tauri/crates/dataset/: Cargo.toml
apps/studio/src-tauri/crates/dataset/src/: lib.rs
apps/studio/src-tauri/crates/db/: Cargo.toml
apps/studio/src-tauri/crates/db/src/: lib.rs
apps/studio/src-tauri/crates/models/: Cargo.toml
apps/studio/src-tauri/crates/models/src/: lib.rs
apps/studio/src-tauri/crates/plugin/: Cargo.toml
apps/studio/src-tauri/crates/plugin/src/: capabilities.rs  lib.rs  lifecycle.rs  metadata.rs  registry.rs
apps/studio/src-tauri/crates/project/: Cargo.toml
apps/studio/src-tauri/crates/project/src/: lib.rs
apps/studio/src-tauri/crates/runtime/: Cargo.toml
apps/studio/src-tauri/crates/runtime-manager/: Cargo.toml
apps/studio/src-tauri/crates/runtime-manager/src/: client.rs  config.rs  error.rs  health.rs  launcher.rs  lib.rs  metrics.rs  monitor.rs  service.rs  types.rs
apps/studio/src-tauri/crates/runtime/src/: lib.rs
apps/studio/src-tauri/crates/search/: Cargo.toml
apps/studio/src-tauri/crates/search/src/: lib.rs
apps/studio/src-tauri/crates/shared/: Cargo.toml
apps/studio/src-tauri/crates/shared/src/: clock.rs  error.rs  event.rs  id.rs  lib.rs  persistence.rs
apps/studio/src-tauri/crates/training/: Cargo.toml
apps/studio/src-tauri/crates/training/src/: lib.rs
apps/studio/src-tauri/crates/training/tests/: app_service.rs
apps/studio/src-tauri/crates/video/: Cargo.toml
apps/studio/src-tauri/crates/video/src/: lib.rs
apps/studio/src-tauri/crates/workspace/: Cargo.toml
apps/studio/src-tauri/crates/workspace/src/: lib.rs
apps/studio/src-tauri/icons/: icon.icns
apps/studio/src-tauri/migrations/00000000000001_initial_schema/: down.sql  up.sql
apps/studio/src-tauri/migrations/00000000000002_project_config/: down.sql  up.sql
apps/studio/src-tauri/migrations/00000000000003_image_data_json/: down.sql  up.sql
apps/studio/src-tauri/migrations/00000000000004_rename_images_to_items/: down.sql  up.sql
apps/studio/src-tauri/migrations/00000000000005_rename_image_id_to_item_id/: down.sql  up.sql
apps/studio/src-tauri/resources/python/: .gitignore  README.md
apps/studio/src-tauri/resources/runtime/: .gitignore  app.py  requirements-optional.txt  requirements.txt
apps/studio/src-tauri/resources/runtime/copilot/: __init__.py  agent.py  config.py  labels.py  llm.py  orchestrator.py  planning.py  qa.py  routing.py  runtime_inference.py  tools.py
apps/studio/src-tauri/resources/runtime/export/: __init__.py  _common.py  onnx.py  openvino.py  tensorrt.py
apps/studio/src-tauri/resources/runtime/inference/: __init__.py  detect.py  florence.py  loader.py  paddle.py  qwen.py  segment.py
apps/studio/src-tauri/resources/runtime/routers/: copilot.py  export.py  health.py  inference.py  training.py
apps/studio/src-tauri/resources/runtime/services/: device.py  job_manager.py  model_registry.py
apps/studio/src-tauri/resources/runtime/tests/: test_copilot_agent.py  test_copilot_core.py  test_runtime_smoke.py
apps/studio/src-tauri/resources/runtime/training/: __init__.py  ultralytics_trainer.py
apps/studio/src-tauri/scripts/: build-runtime.ps1  build-runtime.sh
apps/studio/src-tauri/src/: composition.rs  copilot_ports.rs  gpu.rs  inference.rs  lib.rs  main.rs  plugins.rs  schema.rs  store.rs  training_runtime.rs
apps/studio/src-tauri/src/ai/: copilot.rs  llm.rs  model.rs  plugin.rs  registry.rs  service.rs
apps/studio/src-tauri/src/ai/engines/: mod.rs  sam.rs
apps/studio/src-tauri/src/analysis/: model.rs
apps/studio/src-tauri/src/cloud/: model.rs
apps/studio/src-tauri/src/commands/: ai.rs  analysis.rs  cloud.rs  dataset.rs  entities.rs  images.rs  labels.rs  mod.rs  projects.rs  runtime.rs  video.rs
apps/studio/src-tauri/src/domain/: mod.rs
apps/studio/src-tauri/src/domain/ai/: commands.rs  copilot.rs  llm.rs  mod.rs  model.rs  plugin.rs  registry.rs  runtime_setup.rs  service.rs
apps/studio/src-tauri/src/domain/analysis/: commands.rs  engine.rs  mod.rs  model.rs  service.rs
apps/studio/src-tauri/src/domain/cloud/: commands.rs  model.rs  service.rs
apps/studio/src-tauri/src/domain/common/: repository.rs  service.rs
apps/studio/src-tauri/src/domain/images/: commands.rs  model.rs  repository.rs  service.rs
apps/studio/src-tauri/src/domain/labels/: commands.rs  model.rs  repository.rs  service.rs
apps/studio/src-tauri/src/domain/projects/: model.rs  (+3 more)
apps/studio/src-tauri/src/features/: mod.rs
apps/studio/src-tauri/src/modules/: mod.rs
apps/studio/src-tauri/src/runtime/: mod.rs
apps/studio/src-tauri/src/shared/: activity.rs  composition.rs  entity.rs  events.rs  mod.rs  secrets.rs
apps/studio/src-tauri/src/video/: model.rs
(+1661 files in other folders)
