[package]
name = "vailabel-studio"
version = "1.0.11"
description = "Vailabel Studio Desktop"
authors = ["Vichea Nath <nathvichea1@gmail.com>"]
edition = "2021"

[lib]
name = "vailabel_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "rayon"] }
keyring = { version = "3", default-features = false, features = ["apple-native", "linux-native", "windows-native"] }
open = "5"
opendal = { version = "0.54", default-features = false, features = [
    "services-s3",
    "services-azblob",
    "services-gcs",
] }
rfd = "0.15"
diesel = { version = "2", features = ["sqlite"] }
libsqlite3-sys = { version = "0.28", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tauri = { version = "2", features = ["protocol-asset"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
ort = { version = "2.0.0-rc.12", optional = true, default-features = false, features = ["load-dynamic", "cuda", "api-24"] }
ndarray = { version = "0.17", optional = true, features = ["serde"] }
# Used by the on-demand ONNX Runtime installer to unpack the downloaded packages.
zip = { version = "2", optional = true, default-features = false, features = ["deflate"] }

[features]
default = ["yolo-inference"]
# Enable to build with YOLO/ONNX inference and CUDA provider (requires CUDA 12 runtime on host)
yolo-inference = ["ort", "ndarray", "zip"]
