# This manifest is BOTH the workspace root and a workspace member. Keeping the
# existing package here (rather than moving it under a members/ dir) means
# tauri.conf.json, build.rs, gen/, migrations/ and `cargo tauri dev/build` keep
# resolving the same path — zero churn for the existing app.
[workspace]
members = [
    "crates/runtime-manager",
    # DDD Phase 1 crates (added incrementally; each is a workspace member so the
    # binary and inter-crate deps pin one version via [workspace.dependencies]).
    "crates/core",
    "crates/shared",
    "crates/plugin",
    "crates/runtime",
    "crates/project",
    "crates/dataset",
    "crates/analysis",
    "crates/video",
    "crates/models",
    "crates/copilot",
    "crates/annotation",
    "crates/search",
    "crates/training",
    "crates/arch-tests",
    "crates/db",
]

[workspace.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "process", "time", "io-util", "fs", "sync", "macros"] }
sysinfo = "0.32"
thiserror = "2"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
# Shared across the binary and the vailabel-db / per-module-infra crates so the
# whole workspace pins one diesel + sqlite version.
diesel = { version = "2", features = ["sqlite"] }
libsqlite3-sys = { version = "0.28", features = ["bundled"] }

# Internal workspace crates (DDD modules). Path deps so the binary and crates
# reference one shared version.
vailabel-core = { path = "crates/core" }
vailabel-shared = { path = "crates/shared" }
vailabel-project = { path = "crates/project" }
vailabel-dataset = { path = "crates/dataset" }
vailabel-analysis = { path = "crates/analysis" }
vailabel-video = { path = "crates/video" }
vailabel-models = { path = "crates/models" }
vailabel-copilot = { path = "crates/copilot" }
vailabel-plugin = { path = "crates/plugin" }
vailabel-runtime = { path = "crates/runtime" }
vailabel-annotation = { path = "crates/annotation" }
vailabel-search = { path = "crates/search" }
vailabel-training = { path = "crates/training" }
vailabel-db = { path = "crates/db" }

[package]
name = "vailabel-studio"
version = "1.0.14"
description = "Vailabel Studio Desktop"
authors = ["Vichea Nath <nathvichea1@gmail.com>"]
edition = "2021"

[lib]
name = "vailabel_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "rayon"] }
keyring = { version = "3", default-features = false, features = ["apple-native", "linux-native", "windows-native"] }
open = "5"
opendal = { version = "0.54", default-features = false, features = [
    "services-s3",
    "services-azblob",
    "services-gcs",
] }
rfd = "0.15"
# Embedded Python/FastAPI runtime lifecycle manager (Tauri-free; this crate owns
# spawn/health/monitor/HTTP-bridge for the resources/runtime FastAPI service).
runtime-manager = { path = "crates/runtime-manager" }
# DDD Phase 1: pure domain abstractions + shared kernel + module crates. The
# binary is the composition root that wires these to infrastructure
# (diesel/tauri/...).
vailabel-core = { workspace = true }
vailabel-shared = { workspace = true }
vailabel-db = { workspace = true }
vailabel-project = { workspace = true }
vailabel-dataset = { workspace = true }
vailabel-annotation = { workspace = true }
vailabel-analysis = { workspace = true }
vailabel-video = { workspace = true }
vailabel-models = { workspace = true }
vailabel-copilot = { workspace = true }
vailabel-plugin = { workspace = true }
diesel = { workspace = true }
libsqlite3-sys = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
# SHA-256 verification of downloaded runtime model weights.
sha2 = "0.10"
tauri = { version = "2", features = ["protocol-asset"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
# `api-22` must match the native onnxruntime.dll version fetched by the installer
# (ONNX Runtime 1.22.x exposes ORT API version 22). Bump both together.
ort = { version = "2.0.0-rc.12", optional = true, default-features = false, features = ["load-dynamic", "cuda", "api-22"] }
ndarray = { version = "0.17", optional = true, features = ["serde"] }
# Mask → contour → polygon tracing for SAM segmentation.
imageproc = { version = "0.25", optional = true, default-features = false }
# Used by the on-demand ONNX Runtime installer to unpack the downloaded packages.
zip = { version = "2", optional = true, default-features = false, features = ["deflate"] }

[features]
default = ["yolo-inference"]
# Local ONNX inference: detector (YOLO), SAM segmentation, open-vocab. Pulls the
# ORT runtime + array/image-processing crates. `yolo-inference` is kept as an
# alias so existing `#[cfg(feature = "yolo-inference")]` gates and the default
# build are unchanged; new engines (SAM, …) gate on `local-inference`.
local-inference = ["ort", "ndarray", "zip", "imageproc"]
yolo-inference = ["local-inference"]
