# This manifest is BOTH the workspace root and a workspace member. Keeping the
# existing package here (rather than moving it under a members/ dir) means
# tauri.conf.json, build.rs, gen/, migrations/ and `cargo tauri dev/build` keep
# resolving the same path — zero churn for the existing app.
[workspace]
members = [
    "crates/runtime-manager",
    # DDD Phase 1 crates (added incrementally; each is a workspace member so the
    # binary and inter-crate deps pin one version via [workspace.dependencies]).
    "crates/core",
    "crates/shared",
    "crates/plugin",
    "crates/runtime",
    "crates/project",
    "crates/dataset",
    "crates/cloud",
    "crates/analysis",
    "crates/video",
    "crates/models",
    "crates/copilot",
    "crates/annotation",
    "crates/search",
    "crates/training",
    "crates/workspace",
    "crates/arch-tests",
    "crates/db",
]

[workspace.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "process", "time", "io-util", "fs", "sync", "macros"] }
sysinfo = "0.32"
thiserror = "2"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
# Shared across the binary and the vailabel-db / per-module-infra crates so the
# whole workspace pins one diesel + sqlite version.
diesel = { version = "2", features = ["sqlite"] }
diesel_migrations = "2"
libsqlite3-sys = { version = "0.28", features = ["bundled"] }

# Internal workspace crates (DDD modules). Path deps so the binary and crates
# reference one shared version.
vailabel-core = { path = "crates/core" }
vailabel-shared = { path = "crates/shared" }
vailabel-project = { path = "crates/project" }
vailabel-dataset = { path = "crates/dataset" }
vailabel-cloud = { path = "crates/cloud" }
vailabel-analysis = { path = "crates/analysis" }
vailabel-video = { path = "crates/video" }
vailabel-models = { path = "crates/models" }
vailabel-copilot = { path = "crates/copilot" }
vailabel-plugin = { path = "crates/plugin" }
vailabel-runtime = { path = "crates/runtime" }
vailabel-annotation = { path = "crates/annotation" }
vailabel-search = { path = "crates/search" }
vailabel-training = { path = "crates/training" }
vailabel-workspace = { path = "crates/workspace" }
vailabel-db = { path = "crates/db" }

[package]
name = "vailabel-studio"
version = "1.0.14"
description = "Vailabel Studio Desktop"
authors = ["Vichea Nath <nathvichea1@gmail.com>"]
edition = "2021"

[lib]
name = "vailabel_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "rayon"] }
keyring = { version = "3", default-features = false, features = ["apple-native", "linux-native", "windows-native"] }
open = "5"
rfd = "0.15"
# Embedded Python/FastAPI runtime lifecycle manager (Tauri-free; this crate owns
# spawn/health/monitor/HTTP-bridge for the resources/runtime FastAPI service).
runtime-manager = { path = "crates/runtime-manager" }
# DDD Phase 1: pure domain abstractions + shared kernel + module crates. The
# binary is the composition root that wires these to infrastructure
# (diesel/tauri/...).
vailabel-core = { workspace = true }
vailabel-shared = { workspace = true }
vailabel-db = { workspace = true }
vailabel-project = { workspace = true }
vailabel-dataset = { workspace = true }
vailabel-cloud = { workspace = true }
vailabel-annotation = { workspace = true }
vailabel-analysis = { workspace = true }
vailabel-video = { workspace = true }
vailabel-models = { workspace = true }
vailabel-copilot = { workspace = true }
vailabel-plugin = { workspace = true }
vailabel-training = { workspace = true }
vailabel-workspace = { workspace = true }
async-trait = { workspace = true }
diesel = { workspace = true }
diesel_migrations = { workspace = true }
libsqlite3-sys = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
# SHA-256 verification of downloaded runtime model weights.
sha2 = "0.10"
tauri = { version = "2", features = ["protocol-asset"] }
# Self-update from GitHub Releases (signed updater artifacts + latest.json),
# and process restart so the app can relaunch into the new version.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
# AI inference (detection / segmentation / copilot vision) runs in the embedded
# Python runtime (crate `runtime-manager`), not in Rust — so there is no ONNX
# Runtime (`ort`) or image/array processing stack here anymore.

[features]
default = []
