[package]
name = "vailabel-copilot"
version = "0.1.0"
edition = "2021"
description = "Copilot module for the local AI labeling copilot. `contracts` holds the command request/response DTOs; `domain` holds the pure intent router, LLM plan parser, QA-diff logic, label-suggestion parsing, and the LLM config. Tool execution + LLM/inference orchestration live in the application layer (later phases) against ports; nothing here touches HTTP, Tauri, or the inference engines."

[lib]
name = "vailabel_copilot"

[dependencies]
vailabel-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
