[package]
name = "vailabel-models"
version = "0.1.0"
edition = "2021"
description = "Models module: install/import/activation request contracts for AI model management (download/install/update/verify). Phase 1 extracts the pure request DTOs; the ModelArtifact/ModelVersion aggregates and service logic come later."

[lib]
name = "vailabel_models"

[dependencies]
vailabel-core = { workspace = true }
vailabel-shared = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# Infrastructure layer only: the ai_models / runtime_models tables live in this
# module's own Diesel schema over the shared vailabel-db connection.
vailabel-db = { workspace = true }
diesel = { workspace = true }
