[package]
name = "runtime-manager"
version = "0.1.0"
edition = "2021"
description = "Embedded Python/FastAPI AI runtime lifecycle manager for Vailabel Studio"

[lib]
name = "runtime_manager"

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
sysinfo.workspace = true
thiserror.workspace = true
tracing.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Security",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
