[package]
name = "vailabel-training"
version = "0.1.0"
edition = "2021"
description = "Training module (DDD Phase 1 boundary). Owns TrainingRun/Experiment aggregates and Metric/Checkpoint/TrainingLog entities. Domain types land in a later phase."

[lib]
name = "vailabel_training"

[dependencies]
vailabel-core = { workspace = true }
vailabel-shared = { workspace = true }
