[package]
name = "vailabel-training"
version = "0.1.0"
edition = "2021"
description = "Training module: the TrainingRun aggregate (training-job lifecycle), its repository contract + Diesel persistence, and the application service that orchestrates persistence + events + the async runtime port."

[lib]
name = "vailabel_training"

[dependencies]
vailabel-core = { workspace = true }
vailabel-shared = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
# Infrastructure layer only: the training_jobs table lives in this module's own
# Diesel schema, querying the shared vailabel-db connection.
vailabel-db = { workspace = true }
diesel = { workspace = true }
