[package]
name = "vailabel-video"
version = "0.1.0"
edition = "2021"
description = "Video Annotation module: video metadata, CVAT-style keyframe tracks, track interpolation, ingest orchestration, and request DTOs. Domain/application/contracts are pure; the FFmpeg CLI pipeline lives behind the VideoPipeline port in infrastructure."

[lib]
name = "vailabel_video"

[dependencies]
vailabel-core = { workspace = true }
vailabel-shared = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
